Taller 2d Java AHORA SI CREADO

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ Taller6/Taller Swing Restaurantes Esqueleto/bin/uniandes/dpoo/swing/interfaz/agr
 Taller6/Taller Swing Restaurantes Esqueleto/bin/uniandes/dpoo/swing/interfaz/mapa/VentanaMapa.class
 /Taller6/Taller Swing Restaurantes Esqueleto/bin
 /Taller6/Taller Swing Restaurantes Esqueleto/bin
+/TallerJava2D/.metadata
+TallerJava2D/TallerJava2D/.classpath
+TallerJava2D/TallerJava2D/.project
+/TallerJava2D/TallerJava2D/.settings
+/TallerJava2D/TallerJava2D/bin
